--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc -p .",
+    "start": "node src/index.js"
   },
   "repository": {
     "type": "git",
@@ -17,7 +19,7 @@
     "url": "https://github.com/kaikaew13/primo_project/issues"
   },
   "homepage": "https://github.com/kaikaew13/primo_project#readme",
-  "devDependencies": {
+  "dependencies": {
     "typescript": "^4.9.4"
   }
 }
